<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detail_main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_accent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_games_poster_detail"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_game_name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                tools:text="Resident Evil: Village"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@id/iv_games_poster_detail"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/about_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_detail_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_game_name_detail"
                app:layout_constraintStart_toStartOf="@id/tv_game_name_detail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_about_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white_secondary"
                tools:text="@tools:sample/lorem"
                android:justificationMode="inter_word"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/about_title_detail"
                app:layout_constraintStart_toStartOf="@id/about_title_detail"
                app:layout_constraintEnd_toEndOf="@id/tv_game_name_detail"
                tools:targetApi="o" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/platform_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/platform_detail_title"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/tv_about_detail"
                app:layout_constraintStart_toStartOf="@id/tv_about_detail"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_platform_detail"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:layout_marginTop="10sp"
                android:textColor="@color/white_secondary"
                app:layout_constraintTop_toBottomOf="@id/platform_detail_title"
                app:layout_constraintStart_toStartOf="@id/platform_detail_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metascore_detail_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="@id/platform_detail_title"
                app:layout_constraintStart_toEndOf="@id/tv_platform_detail"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_metascore_detail"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/white_secondary"
                app:layout_constraintTop_toTopOf="@id/tv_platform_detail"
                app:layout_constraintStart_toEndOf="@id/tv_platform_detail"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/genre_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/genre_detail_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_platform_detail"
                app:layout_constraintStart_toStartOf="@id/tv_platform_detail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_genre_detail"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:layout_marginTop="10sp"
                android:textColor="@color/white_secondary"
                app:layout_constraintTop_toBottomOf="@id/genre_detail_title"
                app:layout_constraintStart_toStartOf="@id/genre_detail_title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date_detail_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="@id/genre_detail_title"
                app:layout_constraintStart_toEndOf="@id/tv_genre_detail"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_release_date_detail"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/white_secondary"
                app:layout_constraintTop_toTopOf="@id/tv_genre_detail"
                app:layout_constraintStart_toEndOf="@id/tv_genre_detail"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/developer_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/developer_detail_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_genre_detail"
                app:layout_constraintStart_toStartOf="@id/tv_genre_detail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_developer_detail"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"
                android:layout_marginTop="10sp"
                android:textColor="@color/white_secondary"
                app:layout_constraintTop_toBottomOf="@id/developer_detail_title"
                app:layout_constraintStart_toStartOf="@id/developer_detail_title"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_developer_detail"
                app:layout_constraintStart_toStartOf="@id/tv_developer_detail"
                app:layout_constraintStart_toEndOf="@id/tv_release_date_detail"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:scaleType="center"
        android:elevation="2dp"
        android:translationZ="2dp"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:fabSize="auto"
        app:tint="@color/main_accent"
        app:backgroundTint="@color/white"
        app:layout_anchor="@id/detail_main_view"
        app:layout_anchorGravity="bottom|end"
        android:contentDescription="@string/fav_btn" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>